[gd_scene load_steps=9 format=3 uid="uid://c1vhlig43wshy"]

[ext_resource type="Texture2D" uid="uid://20u2p4oaewjk" path="res://img/arrow.png" id="1_bej43"]
[ext_resource type="Script" path="res://deal_zone_player.gd" id="1_c04r7"]
[ext_resource type="Texture2D" uid="uid://0rkuon2p2bh7" path="res://img/toplayer1.png" id="1_ypphn"]
[ext_resource type="Texture2D" uid="uid://bwedxmm2ya8n" path="res://img/player1dealzone.png" id="2_g58qw"]
[ext_resource type="Texture2D" uid="uid://nyrfptv3183a" path="res://img/2dlight.webp" id="5_2mpqu"]
[ext_resource type="Script" path="res://Score.gd" id="6_jaa0b"]

[sub_resource type="LabelSettings" id="LabelSettings_36h0f"]
font_color = Color(0.986, 1, 0.93, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wtqbu"]
font_size = 9
font_color = Color(0.870588, 0.772549, 0.772549, 1)

[node name="DealZonePlayer" type="Node2D"]
script = ExtResource("1_c04r7")

[node name="restPosition1" type="Node2D" parent="." groups=["restzone"]]
position = Vector2(-103, 0)

[node name="restPosition2" type="Node2D" parent="." groups=["restzone"]]
position = Vector2(-68, 0)

[node name="restPosition3" type="Node2D" parent="." groups=["restzone"]]
position = Vector2(-33, 0)

[node name="restPosition4" type="Node2D" parent="." groups=["restzone"]]
position = Vector2(2, 0)

[node name="restPosition5" type="Node2D" parent="." groups=["restzone"]]
position = Vector2(37, 0)

[node name="restPosition6" type="Node2D" parent="." groups=["restzone"]]
position = Vector2(72, 0)

[node name="restPosition7" type="Node2D" parent="." groups=["restzone"]]
position = Vector2(107, 0)

[node name="Rack" type="Sprite2D" parent="."]
texture = ExtResource("2_g58qw")

[node name="NameTag" type="Sprite2D" parent="."]
texture = ExtResource("1_ypphn")

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -200)
texture = ExtResource("1_bej43")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(53, -8)
energy = 2.52
texture = ExtResource("5_2mpqu")

[node name="Score" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_jaa0b")

[node name="CurrentScore" type="Label" parent="Score"]
layout_mode = 0
offset_left = -173.0
offset_top = -17.0
offset_right = -125.0
offset_bottom = 16.0

[node name="newScore Popup" type="Label" parent="Score"]
layout_mode = 0
offset_left = -218.0
offset_top = 10.0
offset_right = -178.0
offset_bottom = 33.0
label_settings = SubResource("LabelSettings_36h0f")

[node name="Label" type="Label" parent="Score/newScore Popup"]
layout_mode = 0
offset_top = 17.0
offset_right = 150.0
offset_bottom = 43.0
label_settings = SubResource("LabelSettings_wtqbu")

[connection signal="new_score" from="." to="Score" method="_on_deal_zone_player_new_score"]
